--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -1,7 +1,11 @@
 <nav>
   <div id="mainMenuToggleButton"><i class="fa fa-bars"></i></div>
 
-  <div class="logo"><a href="http://farma.vbrqx.com">Pharmachy</a></div>
+  <div class="logo">
+    <a href="http://farma.vbrqx.com"
+      ><img style="width: 40px" src="{{ siteInfo?.logo }}" alt=""
+    /></a>
+  </div>
 
   <div class="mainMenu">
     <div class="responsiveMenuHeader">
