nav items touch behaviour added

--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -20,7 +20,7 @@
         *ngFor="let menu of menus"
         [class.pullDownItem]="menu.childrens"
       >
-        <a href="{{ menu.link }}">{{ menu.item }}</a>
+        <a href="{{ menu.link }}" (tap)="handleTap($event)">{{ menu.item }}</a>
 
         <div
           *ngIf="menu.childrens"
