--- a/src/app/topNavBar/p-nav/p-nav.component.css
+++ b/src/app/topNavBar/p-nav/p-nav.component.css
@@ -384,6 +384,18 @@ nav > div {
   .logo {
     width: auto;
   }
+
+  #mainMenuToggleButton {
+    position: absolute;
+    top: 60px;
+    z-index: 5;
+    background-color: #e8fcfb;
+    left: 0;
+    padding: 5px 5px 5px 10px;
+    border-radius: 0px 3px 3px 0px;
+    box-shadow: 2px 2px 13px 2px rgba(0, 0, 0, 0.5);
+  }
+
   #mainMenuToggleButton i {
     font-size: 25px;
   }
